[gd_scene load_steps=10 format=3 uid="uid://qnne86e81x2c"]

[ext_resource type="Script" path="res://scripts/characters/enemies/undead_fire_mage.gd" id="1_ekduh"]
[ext_resource type="Texture2D" uid="uid://dtscm0muqfm05" path="res://assets/characters/enemies/undead-fire-mage-idle.png" id="1_s704d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h0fpu"]
radius = 7.79221
height = 144.0

[sub_resource type="Animation" id="Animation_g1rpi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_s704d")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_otrap"]
resource_name = "idle"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_s704d")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pttfe"]
_data = {
"RESET": SubResource("Animation_g1rpi"),
"idle": SubResource("Animation_otrap")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qm8ux"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_amkpo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6rhqh"]
states/idle/node = SubResource("AnimationNodeAnimation_qm8ux")
states/idle/position = Vector2(481, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_amkpo")]
graph_offset = Vector2(-237, -49)

[node name="UndeadFireMage" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_ekduh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(9.24, 1)
shape = SubResource("CapsuleShape2D_h0fpu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pttfe")
}
speed_scale = 1.6

[node name="BodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_s704d")
hframes = 14

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pttfe")
}
tree_root = SubResource("AnimationNodeStateMachine_6rhqh")
anim_player = NodePath("../AnimationPlayer")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 69.18
target_desired_distance = 100.0
path_max_distance = 200.0
path_postprocessing = 1
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.972549, 0, 0.333333, 1)

[node name="DistanceToTargetLabel" type="Label" parent="."]
offset_left = -88.0
offset_top = -120.0
offset_right = 90.0
offset_bottom = -97.0
text = "distance to target: %2d"

[node name="TargetingInfoLabel" type="Label" parent="."]
offset_left = -72.0
offset_top = -176.0
offset_right = 70.0
offset_bottom = -127.0
text = "Target reachable:    
Target reached:     "

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionAreaShape" type="CollisionShape2D" parent="CollisionArea"]
scale = Vector2(9.88168, 1.08)
shape = SubResource("CapsuleShape2D_h0fpu")

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
